# jarvis

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  demo_silero_vad_audio.py  demo_silero_vad_callback.py  demo_volume_reducing_audio.py  env.local.example  interruptible_audio_interface.py  main.py  pyproject.toml  requirements.txt  run.py  setup.sh  test_interrupt.py
.cursor/rules/: respeaker.mdc
jarvis/: __init__.py
jarvis/audio/: __init__.py  interface.py  interruptible.py  silero_vad.py  volume_reducing.py
jarvis/cli/: __init__.py  main.py
jarvis/core/: __init__.py  assistant.py  config.py
tests/: __init__.py  conftest.py  test_audio.py  test_default_audio.py  test_elevenlabs_minimal.py  test_interrupt.py  test_silero_vad_audio.py  test_volume_reducing_audio.py
tests/unit/: test_config.py  test_volume_reducing_audio.py
